[package]
name = "check-symlinks"
version = "0.1.0"
edition = "2021"
authors = ["Jamison Lahman <jamison@lahman.dev>"]
description = "Check for broken symlinks"
readme = "README.md"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num_cpus = "1.15.0"
threadpool = "1.8.1"
walkdir = "2.3.3"
