[package]
name = "check-symlinks"
version = "0.4.1"
edition = "2021"
authors = ["Jamison Lahman <jamison@lahman.dev>"]
description = "Check for broken symlinks"
readme = "README.md"
license = "MIT"
exclude = ["testdata/"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ignore = "0.4.20"
num_cpus = "1.15.0"
rayon = "1.10.0"
threadpool = "1.8.1"
