[build-system]
requires = ["hatchling", "hatch-vcs", "go-bin~=1.24", "manygo"]
build-backend = "hatchling.build"

[project]
name = "git-orchard"
description = "A command-line utility for managing git-subtrees."
license = {file = "LICENSE"}
authors = [{ name = "Jamison Lahman", email = "jamison@lahman.dev" }]
readme = "README.md"
requires-python = ">=3.6"
keywords = [
  "git", "vcs", "repo", "subtrees", "tools", "tooling",
]
classifiers = [
    "Programming Language :: Go",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["version"]


[project.urls]
Repository = "https://github.com/jmelahman/git-orchard"

[tool.hatch.build]
include = ["go.mod", "go.sum", "main.go"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.custom]
binary_name = "git-orchard"
