[project]
name = "monorepo"
version = "0.0.0"
authors = [
  {name="Jamison Lahman", email="jamison@lahman.dev"}
]
requires-python = ">=3.13"
dependencies = [
    "selenium>=4.35.0",
    "tweepy>=4.15.0",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
ignore = [
    "ANN401", # Dynamically typed expressions (typing.Any) are disallowed in {name}
    "COM812", # Trailing comma missing
    "D",      # pydocstyle
    "ERA001", # Found commented-out code
    "FIX001", # Line contains FIXME, consider resolving the issue
    "FIX002", # Line contains TODO, consider resolving the issue
    "FIX004", # Line contains HACK, consider resolving the issue
    "INP001", # File {filename} is part of an implicit namespace package. Add an __init__.py.
    "PTH",    # flake8-use-pathlib
    "S101",   # Use of assert detected
    "S607",   # Starting a process with a partial executable path
    "T201",   # `print` found
    "TD",     # flake8-todos
]
select = ["ALL"]

[tool.ruff.lint.isort]
# Google config: https://pycqa.github.io/isort/docs/configuration/profiles.html#google
force-single-line=true
force-sort-within-sections=true
order-by-type=false
single-line-exclusions = ["typing", "collections.abc"]
required-imports = ["from __future__ import annotations"]

[dependency-groups]
dev = [
    "check-symlinks>=0.5.3",
    "hatchling>=1.27.0",
    "manygo>=0.1.3",
    "pytest>=8.4.0",
    "ruff>=0.12.9",
    "ty>=0.0.1a28",
]

[tool.pytest.ini_options]
pythonpath = [
  "manygo",
]

[tool.uv.sources]
manygo = { workspace = true }

[tool.uv.workspace]
members = [
    "manygo",
]
