[build-system]
requires = ["hatchling", "hatch-vcs", "go-bin~=1.24", "manygo"]
build-backend = "hatchling.build"

[project]
name = "cycle-cli"
description = "A nature sounds player for the command-line"
license = {file = "LICENSE"}
authors = [{ name = "Jamison Lahman", email = "jamison@lahman.dev" }]
readme = "README.md"
requires-python = ">=3.6"
keywords = [
  "cycling", "wahoo", "zwift", "fitness", "indoor", "biking"
]
classifiers = [
    "Programming Language :: Go",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["version"]


[project.urls]
Repository = "https://github.com/jmelahman/cycle-cli"

[tool.hatch.build]
include = ["go.mod", "go.sum", "main.go"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.custom]
binary_name = "cycle"
