[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "manygo"
description = "Python library with helpers for packaging golang source code"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Jamison Lahman", email = "jamison@lahman.dev" }
]
keywords = ["golang", "packaging", "platform-tags"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dynamic = ["version"]

[project.urls]
Repository = "https://github.com/jmelahman/manygo"

[tool.hatch.version]
source = "vcs"
fallback-version = "v0.0.0-dev"

[tool.setuptools.package-data]
manygo = ["py.typed", "*.pyi"]

[tool.pytest.ini_options]
pythonpath = ["."]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "ty>=0.0.1a31",
]
